--- a/portfolio.css
+++ b/portfolio.css
@@ -411,6 +411,7 @@ main {
 .projects a {
   border-radius: 5px;
   border: gainsboro solid 1px;
+  background-color: white;
   width: 20vw;
   max-width: 1000px;
   min-width: 320px;
@@ -484,10 +485,9 @@ main {
 
   .projects a {
     width: 120px;
-    max-width: 200px;
     min-width: 150px;
     height: 150px;
-    margin: 0 0 10px 5px;
+    margin: 0 0 10px 10px;
     padding: 20px;
   }
 
@@ -500,8 +500,18 @@ main {
   }
 }
 
-@media (max-width: 350px) {
+@media (max-width: 360px) {
   
+  .projects {
+    width: 320px;
+  }
+
+  .projects a{
+    margin: 0 0 3px 3px;
+  }
+}
+
+@media (max-width: 300px){
   .projects {
     width: 280px;
   }
